--- a/style1.css
+++ b/style1.css
@@ -3,6 +3,7 @@
     padding:0;
     font-family:sans-serif;
     box-sizing: border-box;
+   overflow:hidden;
 }
 body{
     background:url('image.jpg')  no-repeat center center fixed;
@@ -69,4 +70,11 @@ input{
 #error{
     color:red;
     font-weight: 600;
+}
+@media screen and (max-width:600px){
+    .box{
+        overflow: hidden;
+        top:25%;
+        left:10%;
+    }
 }
